@@ -1,6 +1,8 @@
 package classes.life;
 
 import classes.Exceptions.LocationAlreadyOccupiedException;
+import classes.Exceptions.NoFoodSourceFoundException;
+import classes.Exceptions.NoPathFoundException;
 import classes.enumerations.Digestion;
 import classes.enumerations.LocationType;
 import classes.enumerations.State;
@@ -68,7 +70,7 @@ public class Animal extends Life implements IAnimal {
         return weight + genetics.getLegs() * 10;
     }
 
-    private Path getPath(Node target) {
+    private Path getPath(Node target) throws NoPathFoundException {
         SortedList<Path> openNodes = new SortedList<Path>();
         ArrayList<Path> closedNodes = new ArrayList();
 
@@ -77,57 +79,63 @@ public class Animal extends Life implements IAnimal {
             Path current = openNodes.getFirst();
 
             for (Node node : current.getNode().getAdjacentNodes()) {
+                if (node.equals(target)) {
+                    Path targetPath = new Path(target, 0, 0);
+                    targetPath.setParent(current);
+                    return targetPath;
+                }
 
-                if (node.getHolder() == null && !node.getLocationType().equals(LocationType.Obstacle)) {
-                    boolean alreadyWalked = false;
-                    for (Path walkableNode : openNodes.getObjects()) {
+                if (node.getLocationType().equals(LocationType.Obstacle)) {
+                    continue;
+                }
+
+                if (node.getHolder() != null) {
+                    continue;
+                }
+
+                boolean alreadyWalked = false;
+                for (Path walkableNode : openNodes.getObjects()) {
+                    if (walkableNode.getNode().equals(node)) {
+                        alreadyWalked = true;
+                    }
+                }
+
+                if (!alreadyWalked) {
+                    for (Path walkableNode : closedNodes) {
                         if (walkableNode.getNode().equals(node)) {
                             alreadyWalked = true;
                         }
                     }
-
-                    if (!alreadyWalked) {
-                        for (Path walkableNode : closedNodes) {
-                            if (walkableNode.getNode().equals(node)) {
-                                alreadyWalked = true;
-                            }
-                        }
-                    }
-
-                    if (!alreadyWalked) {
-                        Double distance = world.getDistanceBetweenLocations(node, target);
-
-                        float heuristic = distance.floatValue();
-                        heuristic = Math.abs(target.getX() - node.getX()) + Math.abs(target.getY() - node.getY());
-
-                        float cost;
-                        if (node.getLocationType().equals(LocationType.Land)) {
-                            cost = 10;
-                        } else {
-                            cost = 50;
-                        }
-
-                        if (current.getParent() != null) {
-                            cost += current.getCost();
-                        }
-
-                        Path adjacent = new Path(node, cost, heuristic);
-                        adjacent.setParent(current);
-                        openNodes.add(adjacent);
-                    }
                 }
+
+                if (!alreadyWalked) {
+                    Double distance = world.getManhattanDistanceBetweenLocations(node, target);
+
+                    float heuristic = distance.floatValue();
+
+                    float cost;
+                    if (node.getLocationType().equals(LocationType.Land)) {
+                        cost = 2;
+                    } else {
+                        cost = 8;
+                    }
+
+                    if (current.getParent() != null) {
+                        cost += current.getCost();
+                    }
+
+                    Path adjacent = new Path(node, cost, heuristic);
+                    adjacent.setParent(current);
+                    openNodes.add(adjacent);
+                }
+
             }
 
-            if (current.getNode().equals(target)) {
-                Path targetHeuristic = new Path(target, 0, 0);
-                targetHeuristic.setParent(current);
-                return targetHeuristic;
-            }
             closedNodes.add(current);
             openNodes.remove(current);
         }
 
-        return null;
+        throw new NoPathFoundException();
     }
 
     public boolean isAlive() {
@@ -145,7 +153,7 @@ public class Animal extends Life implements IAnimal {
             this.energy /= 2;
             return false;
         } else {
-            energy -= genetics.getLegs();
+            //energy -= genetics.getLegs();
             try {
                 newNode.setHolder(this);
                 current.unsetHolder();
@@ -157,58 +165,83 @@ public class Animal extends Life implements IAnimal {
         }
     }
 
+    private Node getNextNodeInPath() {
+        Path path = this.path;
+        while (true) {
+            if (path.getParent() == null ||
+                    path.getParent().getNode().equals(getNode()) ||
+                    !nodeIsTraversable(path.getParent().getNode())) {
+                break;
+            }
+
+            path = path.getParent();
+        }
+
+        return path.getNode();
+    }
+
+    public boolean nodeIsTraversable(Node node) {
+        if (node.equals(LocationType.Obstacle) || node.getHolder() != null) {
+            return false;
+        }
+        return true;
+    }
+
     public void simulate() {
         if (energy <= 0) {
             world.removeLife(this);
         }
 
-        Node current = getNode();
-//        for (Node adjacent : current.getAdjacentNodes()) {
-//            Life adjacentLife = adjacent.getHolder();
-//            if (adjacentLife instanceof Plant && adjacentLife.getEnergy() > 0) {
-//                eat(adjacentLife);
-//                //return;
-//            }
-//        }
+        if (path == null) {
+            try {
+                path = findNearestFoodSource();
+            } catch(NoFoodSourceFoundException exception) {
 
-        if (path == null || current.equals(path.getNode())) {
-            Node fewd= findNearestFoodSource();
-            path = getPath(findNearestFoodSource());
-        } else {
-            Path parent = path.getParent();
-            while (true) {
-                if (parent.getParent() != null && !parent.getParent().getNode().equals(current)) {
-                    parent = parent.getParent();
-                } else {
-                    if (parent.getNode().getHolder() == null) {
-                        break;
-                    } else {
-                        break;
-                        //parent = getPath(findNearestFoodSource());
-                        //return;
-                    }
-                }
             }
+        } else {
+            Node next = getNextNodeInPath();
+            if (nodeIsTraversable(next)) {
+                move(next);
+            } else {
+                Node current = getNode();
+                if (next.getHolder() instanceof Plant) {
+                    Life life = next.getHolder();
+                    if (life.getEnergy() == 0 || !life.isAlive()) {
+                        path = null;
+                    } else {
+                        eat(life);
+                    }
+                } else {
 
-            if (parent != null) {
-                move(parent.getNode());
+                    path = null;
+                }
             }
         }
     }
 
-    public Node findNearestFoodSource() {
+    public Path findNearestFoodSource() throws NoFoodSourceFoundException {
         ArrayList<Life> living = world.getLife();
 
-        ArrayList<Life> possibleSources = new ArrayList();
+        SortedList<Path> possibleSources = new SortedList();
         for (Life life : living) {
             if (life instanceof Plant && life.isAlive() && life.getEnergy() > 0) {
-                possibleSources.add(life);
+                try {
+                    Path path = getPath(life.getNode());
+                    System.out.println(path);
+                    possibleSources.add(path);
+                } catch(NoPathFoundException exception) {
+
+                }
             }
         }
 
-        return possibleSources.get(0).getNode();
-//        Random rand = new Random();
-//        return possibleSources.get(rand.nextInt(possibleSources.size())).getNode();
+        if (possibleSources.getSize() > 0) {
+            System.out.println();
+            System.out.println(possibleSources.getFirst());
+            return possibleSources.getFirst();
+        } else {
+            throw new NoFoodSourceFoundException();
+        }
     }
 
     public void draw(GraphicsContext context, double drawWidth, double drawHeight) {
